# ratatoskr_daemon

./: .gitignore  README.md  main.py  pyproject.toml
app/: __init__.py  main.py
app/api/: routes.py
app/core/: config.py
app/db/: __init__.py  database.py  models.py
app/services/: orchestrator.py
app/services/core/: base_text.py
app/services/core/google/: models.py
app/services/text_generation/: google_ai.py
